--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,10 @@
     @apply border-foreground/20;
   }
 }
+
+@font-face {
+  font-family: 'NPSfontBold';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/NPSfontBold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
